--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "token" : "MTAyNTU4Njg5ODg4ODA0NDYwNA.GDPjX5.heS9J40lXLnhZdlFftIGdlshO31TaXd_mxVtHM",
+    "token" : "",
     "clientId" : "1025586898888044604",
-    "guildId" : "977390758975914036",
+    "guildId" : "1026104997026476072",
     "holderRole" : "1026409011710541854"
 }
