--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "discord-api-types": "^0.37.11",
     "discord.js": "^14.5.0",
     "dotenv": "^16.0.3",
+    "google-spreadsheet": "^3.3.0",
     "nodemon": "^2.0.20"
   },
   "nodemonConfig": {
-    "ignore": ["*.json"]
+    "ignore": [
+      "*.json"
+    ]
   }
 }
