--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/rest": "^1.2.0",
+    "@discordjs/voice": "^0.13.0",
     "discord-api-types": "^0.37.11",
     "discord.js": "^14.5.0",
     "dotenv": "^16.0.3",
     "google-spreadsheet": "^3.3.0",
+    "libsodium-wrappers": "^0.7.10",
     "nodemon": "^2.0.20"
   },
   "nodemonConfig": {
